# sca_data_prep

./: .gitignore  .hf_dataset_md5  .hf_dataset_md5_duplex  .hf_dataset_url  .hf_dataset_url_duplex  .pre-commit-config.yaml  README.md  main.py  precommit.sh  pyproject.toml  test.ipynb  test.py
.github/workflows/: ci-lint.yaml  main
scripts/: convert_dataset.py  data_models.py  download.py  make_dataset_duplex.py  search.py  start_vllm.sh  transcode.sh
src/sca_data/: __init__.py  audio_processing.py  constants.py  dataset_utils.py  inference.py  utils.py
src/sca_data/models/: __init__.py  audio.py  downloads.py  events.py
test/: decode_audio_test.py  test-normal-dataset.py  test.ipynb  test.py
